# with-langgraph-fastapi

./: .gitignore  README.md  package.json
.github/workflows/: smoke.yml
agent/: main.py  pyproject.toml
agent/sample_agent/: demo.py  websocket_endpoint.py
agent/src/: agent.py
src/: agents.ts  runtime.ts
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/[...slug]/: route.ts
src/app/components/gen-ui/: weather.tsx
src/components/: agent-state.tsx  approval-ui.tsx
src/components/gen-ui/: index.ts  weather.tsx
src/lib/agents/: index.ts  websocket-agent.ts
